--- a/serverless.yml
+++ b/serverless.yml
@@ -8,10 +8,16 @@ provider:
   runtime: nodejs12.x
   lambdaHashingVersion: '20201221'
   region: us-east-2 
+  iamRoleStatements: 
+    - Effect: Allow
+      Action:
+        - dynamodb:*
+      Resource:
+        - arn:aws:dynamodb:us-east-2:627736774863:table/TodoTable
 
 functions:
-  hello:
-    handler: src/hello.handler
+  addTodo:
+    handler: src/addTodo.handler
     events:
       - http:
           path: /
