setting serverless config to allow for CORS

--- a/serverless.yml
+++ b/serverless.yml
@@ -22,24 +22,28 @@ functions:
       - http:
           path: /
           method: post
+          cors: true
   fetchTodos:
     handler: src/fetchTodos.handler
     events:
       - http:
           path: /todos
           method: get
+          cors: true
   fetchTodo:
     handler: src/fetchTodo.handler
     events:
       - http:
           path: /todo/{id}
           method: get
+          cors: true
   updateTodo:
     handler: src/updateTodo.handler
     events:
       - http:
           path: /todo/{id}
           method: put
+          cors: true
 
 resources:
   Resources:
