--- a/serverless.yml
+++ b/serverless.yml
@@ -44,6 +44,13 @@ functions:
           path: /todo/{id}
           method: put
           cors: true
+  deleteTodo:
+    handler: src/deleteTodo.handler
+    events:
+      - http:
+        path: /todo/{id}
+        method: delete
+        cors: true
 
 resources:
   Resources:
